force-app/main/default/objects/TW1_Contract_Category__c/TW1_Contract_Category__c.object-meta.xml
<CustomObject>
    <label>Contract Category</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Contract Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>