force-app/main/default/objects/TW1_Contract_Category__c/fields/TW1_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Category_Name__c</fullName>
    <formula>TW1_Category__r.TW1_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>