force-app/main/default/objects/TW1_Contract_Category__c/fields/TW1_Vendor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts Categories</relationshipLabel>
    <relationshipName>Contracts_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>